<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam3</name>
  <version>0.0.0</version>
  <description>ROS2 Wrapper for ORB_SLAM3</description>
  <maintainer email="zyx@z-yx.cc">Yuxuan Zhang</maintainer>
  <license>MIT</license>

  <!-- Transforms Library -->
  <depend>tf2</depend>
  <!-- ROS2 Messages -->
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <!-- CV / Image Processing Libraries -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <!-- Auto Generated Service Interfaces -->
  <depend>orb_slam3_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
